Ok belle cose ma fare in modo che il dato si adatti subito appena creato
