# src/app/api/models/vault-summary.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface VaultSummary {
+  balance?: number;
+  totalExpenses?: number;
+  totalRevenue?: number;
+  vaultId?: number;
+}
